<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layoutDescription="@xml/movies_fragment_scene">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="?attr/colorPrimaryVariant"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibFilter"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_marginEnd="7dp"
                android:src="@drawable/ic_filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvToolbarUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/garamond_bold"
                android:text="@string/movies"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="31sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chpGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:checkedChip="@+id/chpTopRated"
        app:layout_constraintEnd_toEndOf="parent"
        app:selectionRequired="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chpTopRated"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/top_rated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chpPopular"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chpSaved"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/saved" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/row_movie_item"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chpGroup" />
</androidx.constraintlayout.motion.widget.MotionLayout>