<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/movie_detail_fragment_scene">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPoster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/detail_view_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="140dp"
        android:text="@string/release_date"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rbMovieRating"
        style="?attr/ratingBarStyleIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:isIndicator="true"
        android:progressBackgroundTint="@color/gray"
        android:progressTint="@color/orange"
        android:rating="3.0"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_semi_bold"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/rbMovieRating"
        app:layout_constraintStart_toStartOf="@id/rbMovieRating"
        app:layout_constraintTop_toBottomOf="@id/rbMovieRating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:padding="8dp"
        android:text="@string/overview"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/rvGenres" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/poster_bg"
        android:padding="8dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/tvOverview" />
</androidx.constraintlayout.motion.widget.MotionLayout>